fixed burger menu not showing

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,11 @@
 	font-weight: bold;
 	border-bottom: 3px solid #0b5ed7;
 }
+
+.fa-bars::before {
+	content: "\f0c9";
+}
+
+.fa-times::before {
+	content: "\f00d";	
+}
